<resources>
    <string name="app_name">Daily Suvichar</string>
    <string name="click_back_again_to_exit">Click back again to exit</string>
    <string name="validation_successful">Validation Successful</string>
    <string name="registered_successfully">Registered Successfully</string>
    <string name="registration_unsuccessfully">Registration Unsuccessfully</string>
    <string name="divider">Divider</string>
    <string name="logo">Logo</string>
    <string name="tab">tab</string>
    <string name="seperator">Seperator</string>
    <string name="login_activity_title">Login</string>
    <string name="email_number">Email ID / Phone</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="redirect_to_register">Don\'t have an Account? Register Here</string>
    <string name="logout">Logout</string>
    <string name="forgot_password">Forgot your Password?</string>
    <string name="please_wait">Please wait...</string>
    <string name="password_again">Re-Enter Password</string>
    <string name="register">Register</string>
    <string name="redirect_to_login">Already have an Account?</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_password">Password Length should be > 6</string>
    <string name="invalid_password_again">Password Doesn\'t Match</string>
    <string name="sign_up_failed">Sign Up Failed! Retry</string>
    <string name="sign_up_successful">Sign Up Successful!</string>
    <string name="choose_language">Choose Language-</string>
    <string name="english">English</string>
    <string name="hindi">Hindi\t\t</string>
    <string name="next">Next</string>
    <string name="Feeds">Feeds</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="updates">Updates</string>
    <string name="trending">Trending</string>
    <string name="gurus">Gurus</string>
    <string name="search_for_gurus">Search for Gurus</string>
    <string name="suggested">Suggested</string>
    <string name="menu">Menu</string>
    <string name="share_your_suvichar">Share your suvichar</string>
    <string name="status">Status</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="facebook_app_id" translatable="false">298302307256927</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb298302307256927</string>
    <string name="sign_in_failed">Sign In Failed</string>
    <string name="play_services_error">PLAY SERVICES ERROR</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="choose_interest">Choose Interest</string>
    <string name="please_choose_at_least_two_interests">Please choose at least 2 interests</string>
    <string name="choose_more_interest">Choose more interest</string>
    <string name="astrology">ASTROLOGY</string>
    <string name="diet">DIET</string>
    <string name="religion">RELIGION</string>
    <string name="ayurveda">AYURVEDA</string>
    <string name="yoga">YOGA</string>
    <string name="motivation">MOTIVATION</string>
    <string name="health">HEALTH</string>
    <string name="astrology__">astrology</string>
    <string name="diet__">diet</string>
    <string name="religion__">religion</string>
    <string name="ayurveda__">ayurveda</string>
    <string name="yoga__">yoga</string>
    <string name="motivation__">motivation</string>
    <string name="health__">health</string>
    <string-array name="motivation_array">
        <item>Inspiration</item>
        <item>Stories</item>
        <item>Life</item>
        <item>Learning</item>
        <item>Good Thoughts</item>
        <item>Thought of the day</item>
        <item>Speeches</item>
        <item>Moral Stories</item>
        <item>Real Life Inspiration</item>
        <item>Quotes</item>
        <item>Courage</item>
        <item>Happiness</item>
        <item>Confidence</item>
        <item>Psychology</item>
        <item>Fight Deperssion</item>
        <item>Career motivation</item>
    </string-array>
    <string-array name="religion_array">
        <item>God</item>
        <item>Geeta</item>
        <item>Mahabharat</item>
        <item>Quotes</item>
        <item>Bhajan</item>
        <item>Prayers</item>
        <item>Stories</item>
        <item>Ramayan</item>
        <item>Temples</item>
        <item>Pandits</item>
        <item>Pooja</item>
        <item>Festival</item>
        <item>Krishna</item>
        <item>Ram</item>
        <item>Durga</item>
        <item>Ganesh</item>
        <item>Laxmi</item>
        <item>Daily Darshan</item>
    </string-array>
    <string-array name="ayurveda_array">
        <item>Ayurvedic Tips</item>
        <item>Ayurvedic Medicines</item>
        <item>DIY</item>
        <item>Home Remedies</item>
        <item>Ayurvedic Culture</item>
        <item>Ayurvedic Products</item>
        <item>Ayurvedic Treatment</item>
        <item>Ayurvedic Clinics</item>
        <item>Ayurvedic Herbs</item>
        <item>Ayurvedic Tourism</item>
        <item>Ayurvedic Skin care</item>
        <item>Origin</item>
        <item>Sex</item>
        <item>Ayurvedic Doctors</item>
        <item>Ayurvedic Cooking</item>
    </string-array>
    <string-array name="health_array">
        <item>Health Tips</item>
        <item>Gym Tips</item>
        <item>Mudra Healing</item>
        <item>Home health remedies</item>
        <item>Weight loss</item>
        <item>Weight Gain</item>
        <item>Beauty</item>
        <item>Skincare</item>
        <item>Health Food</item>
        <item>Healthy Lifestyle</item>
        <item>Workouts</item>
        <item>Gym Workouts</item>
        <item>Meditation</item>
    </string-array>
    <string-array name="diet_array">
        <item>Fitness Food</item>
        <item>Indian Diet</item>
        <item>Vegetarian Diet</item>
        <item>Daily Diet</item>
        <item>Balanced Diet</item>
        <item>DIY Diet</item>
        <item>Green Diet</item>
        <item>Fruit Diet</item>
        <item>0 Fat Diet</item>
        <item>Diet Tips</item>
        <item>Dinner Diet</item>
        <item>Lunch Diet</item>
        <item>Breakfast Diet</item>
        <item>Protein Diet</item>
        <item>Calcium Diet</item>
        <item>Diet Combinations</item>
    </string-array>
    <string-array name="astrology_array">
        <item>Prediction</item>
        <item>Tip of the day</item>
        <item>Horoscope</item>
        <item>Learn</item>
        <item>Aries</item>
        <item>Leo</item>
        <item>Sagittarius</item>
        <item>Taurus</item>
        <item>Virgo</item>
        <item>Capricon</item>
        <item>Gemini</item>
        <item>Libra</item>
        <item>Aquarius</item>
        <item>Cancer</item>
        <item>Scorpio</item>
        <item>Piesces</item>
    </string-array>
    <string-array name="yoga_array">
        <item>Aasana</item>
        <item>Power Yoga</item>
        <item>Yoga Tips</item>
        <item>Fitness Yoga</item>
        <item>Daily Yoga</item>
        <item>30 sec Yoga</item>
        <item>Yoga Quotes</item>
        <item>Yoga Videos</item>
        <item>Advanced Yoga</item>
        <item>Professional Yoga</item>
        <item>Yoga Exercises</item>
        <item>Yoga Philosophy</item>
        <item>Yoga History</item>
        <item>Yoga Poses</item>
        <item>Ramdev Yoga</item>
        <item>Osho Yoga</item>
        <item>Meditation</item>
    </string-array>
    <string name="hindi_text">English Text Accessed</string>
    <string name="select_tags">SELECT TAGS</string>
    <string name="write_something">Write something here...</string>
    <string name="your_feeds">Your Feeds</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="following">FOLLOWING</string>
    <string name="follow">FOLLOW</string>
    <string name="upload_failed">Upload Failed. Please Try Again!</string>
    <string name="file_uploaded">File Uploaded!</string>
    <string name="set_name">Set Your Name</string>
    <string name="full_name">First Name + Last Name</string>
    <string name="enter_name">Enter your name...</string>
    <string name="set_bio">Set Your Bio</string>
    <string name="short_desc">A Short Descripton About Yourself.</string>
    <string name="enter_bio_here">Enter bio here...</string>
    <string name="bio">Bio:</string>
    <string name="set_username">Set Your Username</string>
    <string name="represent">A Short Name YouRepresent.</string>
    <string name="enter_username">Enter username here...</string>
    <string name="preference">Set Your Language Preference</string>
    <string name="english_lang">English</string>
    <string name="hindi_lang">Hindi</string>
    <string name="choose">Choose This</string>
    <string name="usertype">Set Your User Type</string>
    <string name="standard">Standard User</string>
    <string name="spiritual">Spiritual Leader</string>
    <string name="standard_caps">STANDARD</string>
    <string name="guru_caps">GURU</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="male_caps">MALE</string>
    <string name="female_caps">FEMALE</string>
    <string name="astrology_">Astrology Guru</string>
    <string name="yoga_">Yoga Guru</string>
    <string name="pandit_">Pandit</string>
    <string name="motivation_">Motivation Guru</string>
    <string name="ayurveda_">Ayurveda Guru</string>
    <string name="set_spec">Set Your Specialization:</string>
    <string name="descc">Spiritual Skill You Majorly Specialize In.</string>
    <string name="please_correct">Please Enter Correct Date Of Birth</string>
    <string name="please">PLEASE ENTER FULL DETAILS:</string>
    <string name="please_user">PLEASE SELECT USER TYPE</string>
    <string name="ns_fullname">(Full Name: Not Selected)</string>
    <string name="ns_username">Username: Not Selected</string>
    <string name="ns_shortdesc">Short Description/Bio. : Not Selected</string>
    <string name="ns_lang">Language: Not Selelcted</string>
    <string name="ns_usertype">User Type: Not Selected</string>
    <string name="ns_dob">Date Of Birth: Not Selected</string>
    <string name="ns_gender">Gender: Not Selected</string>
    <string name="ns_age">Age: Select DOB to evaluate</string>
    <string name="please_docs">Please upload documents to get verified as a Guru</string>
    <string name="uploading">Uploading</string>
    <string name="please_atleast">Please Select Atleast One Subcategory.</string>
    <string name="failure">Upload Failed. Please Try Again!</string>
    <string name="uploaded">File Uploaded; Changes will be reflected in subsequent launches</string>
    <string name="success">Post successful!</string>
    <string name="caption">Write a caption</string>
    <string name="no_file">No file chosen</string>
    <string name="unknown">Unknown User</string>
    <string name="pleeease">Please Select Atleast One Subcategory.</string>
    <string name="pluese">Please Choose The Interest Category</string>
    <string name="diett">diet</string>
    <string name="yogaa">yoga</string>
    <string name="healthh">health</string>
    <string name="religionn">religion</string>
    <string name="motivationn">motivation</string>
    <string name="ayurvedaa">ayurveda</string>
    <string name="astrologyy">astrology</string>
    <string name="others">Others</string>
    <string name="please__">Please Select Atleast One Subcategory.</string>
    <string name="categ_inter">Please Choose The Interest Category</string>
    <string name="uploadinggg">Uploading</string>
    <string name="user">User  </string>
    <string name="shared_an_update">  shared an update</string>
    <string name="_21_mins">21 mins</string>
    <string name="dot">.</string>
    <string name="explore">Explore</string>
</resources>