<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context="com.example.sasuke.dailysuvichar.activity.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_normal">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo_name_one" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_logo"
                android:layout_marginTop="10dp"
                android:hint="@string/email_number"
                android:inputType="textEmailAddress"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_email"
                android:layout_marginTop="2dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/et_password_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_password"
                android:layout_marginTop="2dp"
                android:hint="@string/password_again"
                android:inputType="textPassword"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_password_again"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="?attr/selectableItemBackground"
                android:text="@string/register"
                android:textColor="@color/white" />


            <TextView
                android:id="@+id/redirect_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_register"
                android:layout_centerHorizontal="true"
                android:layout_margin="15sp"
                android:text="@string/redirect_to_login"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/redirect_to_login"
                android:layout_centerHorizontal="true"
                android:background="?attr/selectableItemBackground"
                android:text="@string/login"
                android:textColor="@color/white" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>