<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.robillo.sasuke.dailysuvichar.activity.MainActivity">

    <include layout="@layout/action_bar_main" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:padding="@dimen/margin_normal">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo_name_one" />

        <TextView
            android:id="@+id/tv_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/choose_language"
            android:textColor="@color/blue_text"
            android:textSize="@dimen/font_larger" />

        <RadioGroup
            android:id="@+id/rg_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_language"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <RadioButton
                android:id="@+id/rb_eng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/english"
                android:textColor="@color/blue_text"
                android:textSize="@dimen/font_large" />

            <RadioButton
                android:id="@+id/rb_hindi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hindi"
                android:textColor="@color/blue_text"
                android:textSize="@dimen/font_large"
                tools:mockup_opacity="2dp" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="bottom"
            android:background="@color/blue_text"
            android:text="@string/next"
            android:textColor="@color/white" />
    </RelativeLayout>
</RelativeLayout>
