<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.example.sasuke.dailysuvichar.activity.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_normal">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo_name_one" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_logo"
                android:layout_marginTop="10dp"
                android:hint="@string/email_number"
                android:inputType="textEmailAddress"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_email"
                android:layout_marginTop="2dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black" />

            <LinearLayout
                android:id="@+id/buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_password"
                android:orientation="horizontal"
                android:weightSum="2">


                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="@color/blue_text"
                    android:text="@string/login"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="@color/green_very_dark"
                    android:text="@string/register"
                    android:textColor="@color/white" />

            </LinearLayout>

            <TextView
                android:id="@+id/forgot_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttons"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="6dp"
                android:text="@string/forgot_password" />

            <TextView
                android:id="@+id/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forgot_pwd"
                android:layout_centerHorizontal="true"
                android:layout_margin="15sp"
                android:text="OR"
                android:textSize="15sp" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/google_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/or"
                android:layout_centerHorizontal="true">

            </com.google.android.gms.common.SignInButton>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/fb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/google_sign_in"
                android:layout_centerHorizontal="true"
                android:layout_margin="10sp" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>