<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10sp"
        android:id="@+id/ll">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/select_tags"
            android:textAlignment="center"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:padding="5sp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:textStyle="bold" />

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5sp"
            android:layout_margin="5sp"
            app:cardBackgroundColor="@color/white">

            <TextView
                android:gravity="center"
                android:padding="5sp"
                android:textSize="15sp"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/diett"
                android:textColor="@color/black"
                android:id="@+id/diet"
                android:background="?attr/selectableItemBackground"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5sp"
            android:layout_margin="5sp"
            app:cardBackgroundColor="@color/white">

            <TextView
                android:gravity="center"
                android:padding="5sp"
                android:textSize="15sp"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/yogaa"
                android:id="@+id/yoga"
                android:textColor="@color/black"
                android:background="?attr/selectableItemBackground"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5sp"
            android:layout_margin="5sp"
            app:cardBackgroundColor="@color/white">

            <TextView
                android:gravity="center"
                android:padding="5sp"
                android:textSize="15sp"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/healthh"
                android:id="@+id/health"
                android:textColor="@color/black"
                android:background="?attr/selectableItemBackground"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5sp"
            android:layout_margin="5sp"
            app:cardBackgroundColor="@color/white">

            <TextView
                android:gravity="center"
                android:padding="5sp"
                android:textSize="15sp"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/religionn"
                android:id="@+id/religion"
                android:textColor="@color/black"
                android:background="?attr/selectableItemBackground"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5sp"
            android:layout_margin="5sp"
            app:cardBackgroundColor="@color/white">

            <TextView
                android:gravity="center"
                android:padding="5sp"
                android:textSize="15sp"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/motivationn"
                android:id="@+id/motivation"
                android:textColor="@color/black"
                android:background="?attr/selectableItemBackground"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5sp"
            android:layout_margin="5sp"
            app:cardBackgroundColor="@color/white">

            <TextView
                android:gravity="center"
                android:padding="5sp"
                android:textSize="15sp"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/ayurvedaa"
                android:id="@+id/ayurveda"
                android:textColor="@color/black"
                android:background="?attr/selectableItemBackground"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5sp"
            android:layout_margin="5sp"
            app:cardBackgroundColor="@color/white">

            <TextView
                android:gravity="center"
                android:padding="5sp"
                android:textSize="15sp"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/astrologyy"
                android:id="@+id/astrology"
                android:textColor="@color/black"
                android:background="?attr/selectableItemBackground"/>

        </android.support.v7.widget.CardView>


    </LinearLayout>

</HorizontalScrollView>